# localCoder

./: .gitignore  INSTALL.md  README.md  SETUP.md  multi-agent-software-factory-idea-discussion.md
.github/workflows/: ci-poc.yml
docs/: merge-order.md  poc-migration-status.md  poc-status.md  poc-transition.md
poc/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
poc/agent-generalist/: Dockerfile
poc/agent-generalist/app/: main.py
poc/cli/: main.py  pyproject.toml
poc/cli/localcoder/: main.py
poc/db/: schema.sql  store.py
poc/docs/: architecture.md  copilot_adapter.md  motivation.md  quick-install.md  usage.md
poc/generalist-agent/: agent.py
poc/hub/: Dockerfile  hub.py  requirements.txt
poc/hub/app/: database.py  main.py  schemas.py
poc/hub/app/routes/: artifacts.py  repos.py  tasks.py
poc/hub/migrations/: 001_init.sql
poc/llm-gateway/: Dockerfile  copilot_adapter.py  gateway.py
poc/llm-gateway/app/: main.py
poc/llm_gateway/: README.md  __init__.py  config.py  gateway.py
poc/llm_gateway/providers/: __init__.py  base.py  copilot.py  openai_compat.py
poc/python-runner/: Dockerfile  runner.py
poc/python-runner/app/: main.py
poc/python_runner/: __init__.py
poc/tests/: __init__.py  conftest.py  test_copilot_adapter.py  test_db.py  test_gateway.py  test_python_runner.py
tests/: requirements.txt
tests/unit/: test_poc_llm_gateway.py
